authentication/demo/demo.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo
  labels:
    name:  demo
    app: demo-svc
    use: demo
    version: v1.0.0 
spec:
  selector:
    matchLabels:
      name: demo
      app: demo-svc
      use: demo
      version: v1.0.0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  demo
        app: demo-svc
        use: demo
        version: v1.0.0
    spec:
      containers:
      - image:  blueinit/auth-spike:1.0.0
        imagePullPolicy: IfNotPresent
        name:  demo
        resources:
          limits:
            cpu: 200m
            memory: 1Gi
          requests:
            cpu: "100m"
            memory: "256Mi"                
        ports:
        - containerPort:  8080
          name:  default
        volumeMounts:
        - mountPath: /data
          name: data
      restartPolicy: Always    
      serviceAccountName: demo
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-svc

# ---
# apiVersion: cert-manager.io/v1
# kind: Issuer
# metadata:
#   name: demo-issuer
# spec:
#   selfSigned: {}
# ---  
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: learn-com
#   namespace: default
# spec:
#   secretName: learn-com-tls
#   issuerRef:
#     name: demo-issuer
#   commonName: "*.learn.com"
#   dnsNames:
#   - "*.learn.com"
# ---
