authentication/demo/envoy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: keycloak-auth
spec:
  workloadSelector:
    labels:
      app: demo-svc
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        config:
          realm: "demo"
          stat_prefix: "demo"
          auth_service:
            server_uri:
              uri: "https://keycloak.centralizer.io/realms/demo/protocol/openid-connect/token"
              cluster: "outbound|8443||keycloak-service.default.svc.cluster.local"
            client_id: "demo-client"
            client_secret: "DoN1Q0SbUa8JEo0eRytfVwDtu96nW9ig"
