authentication/demo/ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "demo.centralizer.io"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-vs
spec:
  hosts:
    - "demo.centralizer.io"
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: demo-svc.default.svc.cluster.local
            port:
              number: 80
